Added 64 bit Chroma DLL

--- a/CSDK_ChromaModSample.vcxproj.filters
+++ b/CSDK_ChromaModSample.vcxproj.filters
@@ -53,5 +53,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="CChromaEditorLibrary.dll" />
+    <None Include="CChromaEditorLibrary64.dll" />
   </ItemGroup>
 </Project>
