--- a/CSDK_ChromaModSample.vcxproj
+++ b/CSDK_ChromaModSample.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{29C63FF1-E210-4DE7-856B-C7E5963A0836}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CSDKChromaModSample</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -84,7 +84,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -100,7 +100,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -116,7 +116,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -136,7 +136,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -155,29 +155,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
+    <ClInclude Include="HandleInput.h" />
     <ClInclude Include="Razer\ChromaAnimationAPI.h" />
+    <ClInclude Include="Razer\ChromaLogger.h" />
     <ClInclude Include="Razer\ChromaSDKPluginTypes.h" />
     <ClInclude Include="Razer\RzChromaSDKDefines.h" />
     <ClInclude Include="Razer\RzChromaSDKTypes.h" />
     <ClInclude Include="Razer\RzErrors.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CSDK_ChromaModSample.cpp" />
-    <ClCompile Include="pch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="HandleInput.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Razer\ChromaAnimationAPI.cpp" />
+    <ClCompile Include="Razer\ChromaLogger.cpp" />
     <ClCompile Include="Razer\ChromaSDKPluginTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CChromaEditorLibrary.dll">
       <DeploymentContent>true</DeploymentContent>
     </None>
-    <None Include="CChromaEditorLibrary64.dll" />
+    <None Include="CChromaEditorLibrary.pdb">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="CChromaEditorLibrary64.dll">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="CChromaEditorLibrary64.pdb">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
